--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="StyleSheet" rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Weather the Storm</title>
 </head>
 <body>
     <div id="MainContainer">
