Got local storage to work

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h4 id="CurrentWind"></h4>
                 <h4 id="CurrentHumidity"></h4>
             </div>
-            <div id="ForecastContainer">Forcast goes here</div>
+            <div id="ForecastContainer"></div>
         </div>
     </div>
  <script src="script.js"></script>   
