Created a saved cities function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div id="SearchArea">
             <input id="SearchInput" type="text">
             <button id="SearchButton">Search</button>
-            <div id="SearchHistory"></div>
+            <div id="SavedCitiesList"></div>
+            <h2>History</h2>
         </div>
         <div id="WeatherArea">
             <div id="CurrentWeatherContainer">
