--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Weather the Storm</title>
 </head>
 <body>
+    <header class="header">
+        <h1>Weather the Storm</h1>
+    </header>
     <div id="MainContainer">
         <div id="SearchArea">
             <input id="SearchInput" type="text">
